# zfs

./: .gitignore  Cargo.toml  README.md
crates/grid-core/: Cargo.toml
crates/grid-core/src/: direct_message.rs  error.rs  lib.rs  program_topic.rs  sector_protocol.rs
crates/grid-crypto/: Cargo.toml
crates/grid-crypto/src/: error.rs  lib.rs  poseidon.rs  tests.rs  wrap.rs
crates/grid-net/src/: addr.rs  behaviour.rs  builder.rs  config.rs  event.rs  lib.rs  service.rs
crates/grid-net/tests/: connectivity.rs
crates/grid-proof-groth16/src/: circuit.rs  prover.rs  setup.rs  verifier.rs
crates/grid-proof/src/: error.rs  lib.rs  verifier.rs
crates/grid-relayd/: Cargo.toml
crates/grid-relayd/src/: main.rs
crates/grid-rpc/: Cargo.toml
crates/grid-rpc/src/: config.rs  dispatch.rs  error.rs  lib.rs  server.rs
crates/grid-sdk/: Cargo.toml
crates/grid-sdk/src/: error.rs  identity.rs  lib.rs  sector.rs
crates/grid-service/: Cargo.toml
crates/grid-service/src/: config.rs  context.rs  descriptor.rs  error.rs  gossip.rs  identity.rs  lib.rs  registry.rs  service.rs  wasm_bindings.rs  wasm_host.rs
crates/grid-service/wit/: service.wit
crates/grid-services/identity/: Cargo.toml
crates/grid-services/identity/src/: identity.rs  lib.rs
crates/grid-services/interlink/: Cargo.toml
crates/grid-services/interlink/src/: interlink_service.rs  lib.rs
crates/grid-services/zephyr/: Cargo.toml
crates/grid-storage/: Cargo.toml
crates/grid-storage/src/: sector_rocks.rs  sector_traits.rs
crates/zephyr-orchestrator-bin/: Cargo.toml  build.rs
crates/zephyr-orchestrator-bin/src/: app.rs  helpers.rs  main.rs  node_manager.rs  render_blockflow.rs  render_dashboard.rs  render_launch.rs  render_log.rs  render_nodes.rs  render_topology.rs  state.rs  traffic_gen.rs
crates/zephyr-orchestrator-bin/src/components/: buttons.rs  data_display.rs  feedback.rs  inputs.rs  labels.rs  layout.rs  mod.rs  tokens.rs
crates/zero-neural/: Cargo.toml
crates/zero-neural/src/: lib.rs  shamir.rs
crates/zero-neural/tests/: integration.rs
crates/zfs-core/src/: error.rs  lib.rs  program_descriptor.rs  sector_protocol.rs
crates/zfs-core/tests/: roundtrip.rs
crates/zfs-crypto/: Cargo.toml
crates/zfs-crypto/src/: derive.rs  error.rs  lib.rs  padding.rs  poseidon.rs  tests.rs  wrap.rs
crates/zfs-net/src/: behaviour.rs  builder.rs  event.rs  lib.rs  service.rs
crates/zfs-net/tests/: connectivity.rs
crates/zfs-programs/: Cargo.toml
crates/zfs-programs/src/: lib.rs  tests.rs  zchat.rs  zid.rs
crates/zfs-proof/: Cargo.toml
crates/zfs-proof-groth16/: Cargo.toml
crates/zfs-proof-groth16/src/: circuit.rs  lib.rs  prover.rs  setup.rs  verifier.rs
crates/zfs-proof/src/: lib.rs  verifier.rs
crates/zfs-sdk/: Cargo.toml
crates/zfs-sdk/src/: client.rs  error.rs  helpers.rs  lib.rs  sector.rs
crates/zfs-storage/: Cargo.toml
crates/zfs-storage/src/: error.rs  lib.rs  rocks.rs  sector_rocks.rs  sector_traits.rs  tests.rs
crates/zfs-zode/: Cargo.toml
crates/zfs-zode-app/: Cargo.toml
crates/zfs-zode-app/src/: app.rs  chat.rs  components.rs  helpers.rs  identity.rs  main.rs  render.rs  render_storage.rs  settings.rs  state.rs  visualization.rs  visualization_render.rs
crates/zfs-zode-cli/src/: app.rs  main.rs  ui.rs
crates/zfs-zode/src/: config.rs  error.rs  gossip.rs  lib.rs  sector_handler.rs  types.rs  zode.rs
crates/zode/: Cargo.toml
crates/zode-app/: Cargo.toml
crates/zode-app/src/: app.rs  components.rs  identity.rs  interlink.rs  main.rs  profile.rs  render.rs  settings.rs  state.rs  vault.rs  visualization_render.rs
crates/zode-bin/: Cargo.toml  build.rs
crates/zode-bin/src/: app.rs  helpers.rs  identity.rs  interlink.rs  main.rs  profile.rs  render.rs  render_detail.rs  render_programs.rs  render_services.rs  render_storage.rs  settings.rs  setup.rs  state.rs  vault.rs  visualization.rs  visualization_render.rs
crates/zode-cli/: Cargo.toml
crates/zode-cli/src/: app.rs  main.rs  ui.rs
crates/zode/src/: config.rs  error.rs  gossip.rs  lib.rs  metrics.rs  sector_handler.rs  types.rs  zode.rs
deploy/aws/relay/: .state  00-env.example  01-check-prereqs.sh  02-create-security-group.sh  03-launch-instance.sh  04-build-relay.sh  05-deploy-service.sh  06-verify.sh  README.md  lib.sh
docs/: build-a-program.md  grid-protocol.md  protocol.md  run-a-zode.md  zfs-protocol.md
docs/spec/: grid-service-extensions.md
docs/spec/v0.1.0/: 00-overview.md  01-architecture.md  03-programs-and-topics.md  04-proof.md  05-standard-programs.md  06-zode.md  07-zode-cli.md  08-zode-app.md  (+5 more)
docs/whitepaper/: generate-whitepaper.py  grid-protocol-whitepaper-v0.4.0.html  grid-protocol-whitepaper-v0.6.0.html  grid-protocol-whitepaper.html
(+43 files in other folders)
