[package]
name = "grid-rpc"
version = "0.2.0"
edition = "2021"
description = "JSON-RPC 2.0 HTTP server for external client access to a Zode"

[dependencies]
grid-core = { path = "../grid-core" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
