[package]
name = "grid-service"
version = "0.2.0"
edition = "2021"
description = "Service framework for The Grid — trait, descriptor, context, registry, and WASM host"
license = "MIT OR Apache-2.0"

[dependencies]
grid-core = { path = "../grid-core" }
grid-rpc = { path = "../grid-rpc" }
async-trait = "0.1"
axum = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
hmac = "0.12"
base64 = "0.22"
