[package]
name = "zfs-proof-groth16"
version = "0.1.0"
edition = "2021"
description = "Groth16 shape+encrypt circuit, prover, verifier, and trusted setup for ZFS"
license = "MIT OR Apache-2.0"

[dependencies]
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "r1cs"] }
ark-snark = "0.5"
ark-std = "0.5"
zfs-core = { path = "../zfs-core" }
zfs-proof = { path = "../zfs-proof" }
zfs-crypto = { path = "../zfs-crypto" }
rand = "0.8"
thiserror = "2"
