[package]
name = "grid-services-interlink"
version = "0.2.0"
edition = "2021"
description = "Interlink Service — wraps the Interlink Program with an HTTP API"
license = "MIT OR Apache-2.0"

[dependencies]
grid-core = { path = "../../grid-core" }
grid-service = { path = "../../grid-service" }
grid-programs-interlink = { path = "../../grid-programs/interlink" }
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
